split css into separate files

--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
     <link rel="manifest" href="assets/site.webmanifest">
 
     <script src="build/main.js"></script>
-    <link rel="stylesheet" href="src/css/style.css">
-    <title>Scramblish Elm</title>
+
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/base.css">
+    <link rel="stylesheet" href="src/css/grammar-rules.css">
+    <link rel="stylesheet" href="src/css/sentences.css">
+    <link rel="stylesheet" href="src/css/word.css">
+    <link rel="stylesheet" href="src/css/word-gen.css">
+    <link rel="stylesheet" href="src/css/side-panel.css">
+
+    <title>Scramblish</title>
 </head>
 
 <body>
